QR img shifted fixed

--- a/src/app/modals/upd-codes-modal/upd-codes-modal.page.scss
+++ b/src/app/modals/upd-codes-modal/upd-codes-modal.page.scss
@@ -136,19 +136,33 @@ ion-modal {
 }
 
 .qrIn{
-  border-top: 0;
-  margin-top: 0;
-  padding-top: 0;
-  
+  border-bottom: -20px;
+  padding-bottom: -20px;
+  margin-bottom: -20px;
+  z-index: 98;
 }
 
 .qrLabel{
+  // top:-30px;
   border-top: 0;
-  margin-top: -5px;
   margin-bottom: 3px;
   padding-top: 0;
   border-bottom: 3px;
   text-align: center;
+  width: 100%;
+  z-index: 99;
+}
+
+#qrImage{
+  margin:0px;
+  padding: 0px;
+  border: 0px;
+  height: 240px;
+  // width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 
